First commited as before_14665_rev1