@@ -44,36 +44,17 @@
 package org.eclipse.jgit.util;
 
 import java.io.BufferedReader;
-import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.OutputStream;
-import java.io.PrintStream;
-import java.nio.charset.Charset;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
-import java.text.MessageFormat;
 import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Objects;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicReference;
 
-import org.eclipse.jgit.annotations.Nullable;
-import org.eclipse.jgit.api.errors.JGitInternalException;
-import org.eclipse.jgit.errors.CommandFailedException;
+import org.eclipse.jgit.errors.SymlinksNotSupportedException;
 import org.eclipse.jgit.internal.JGitText;
-import org.eclipse.jgit.lib.Constants;
-import org.eclipse.jgit.lib.Repository;
-import org.eclipse.jgit.util.ProcessResult.Status;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /** Abstraction to support various file system operations not in Java. */
 public abstract class FS {
@@ -105,65 +86,17 @@ public abstract class FS {
 					return new FS_Win32_Cygwin();
 				else
 					return new FS_Win32();
-			} else {
-				return new FS_POSIX();
-			}
+			} else if (FS_POSIX_Java6.hasExecute())
+				return new FS_POSIX_Java6();
+			else
+				return new FS_POSIX_Java5();
 		}
 	}
-
-	/**
-	 * Result of an executed process. The caller is responsible to close the
-	 * contained {@link TemporaryBuffer}s
-	 *
-	 * @since 4.2
-	 */
-	public static class ExecutionResult {
-		private TemporaryBuffer stdout;
-
-		private TemporaryBuffer stderr;
-
-		private int rc;
-
-		/**
-		 * @param stdout
-		 * @param stderr
-		 * @param rc
-		 */
-		public ExecutionResult(TemporaryBuffer stdout, TemporaryBuffer stderr,
-				int rc) {
-			this.stdout = stdout;
-			this.stderr = stderr;
-			this.rc = rc;
-		}
-
-		/**
-		 * @return buffered standard output stream
-		 */
-		public TemporaryBuffer getStdout() {
-			return stdout;
-		}
-
-		/**
-		 * @return buffered standard error stream
-		 */
-		public TemporaryBuffer getStderr() {
-			return stderr;
-		}
-
-		/**
-		 * @return the return code of the process
-		 */
-		public int getRc() {
-			return rc;
-		}
-	}
-
-	private final static Logger LOG = LoggerFactory.getLogger(FS.class);
 
 	/** The auto-detected implementation selected for this operating system and JRE. */
 	public static final FS DETECTED = detect();
 
-	private volatile static FSFactory factory;
+	private static FSFactory factory;
 
 	/**
 	 * Auto-detect the appropriate file system abstraction.
@@ -197,14 +130,29 @@ public abstract class FS {
 	 */
 	public static FS detect(Boolean cygwinUsed) {
 		if (factory == null) {
-			factory = new FS.FSFactory();
+			try {
+				Class<?> activatorClass = Class
+						.forName("org.eclipse.jgit.util.Java7FSFactory"); //$NON-NLS-1$
+				// found Java7
+				factory = (FSFactory) activatorClass.newInstance();
+			} catch (ClassNotFoundException e) {
+				// Java7 module not found
+				factory = new FS.FSFactory();
+				// Silently ignore failure to find Java7 FS factory
+			} catch (UnsupportedClassVersionError e) {
+				// Java7 module not accessible
+				factory = new FS.FSFactory();
+			} catch (Exception e) {
+				factory = new FS.FSFactory();
+				throw new Error(e);
+			}
 		}
 		return factory.detect(cygwinUsed);
 	}
 
 	private volatile Holder<File> userHome;
 
-	private volatile Holder<File> gitSystemConfig;
+	private volatile Holder<File> gitPrefix;
 
 	/**
 	 * Constructs a file system abstraction.
@@ -221,7 +169,7 @@ public abstract class FS {
 	 */
 	protected FS(FS src) {
 		userHome = src.userHome;
-		gitSystemConfig = src.gitSystemConfig;
+		gitPrefix = src.gitPrefix;
 	}
 
 	/** @return a new instance of the same type of FS. */
@@ -295,7 +243,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public long lastModified(File f) throws IOException {
-		return FileUtils.lastModified(f);
+		return f.lastModified();
 	}
 
 	/**
@@ -308,7 +256,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public void setLastModified(File f, long time) throws IOException {
-		FileUtils.setLastModified(f, time);
+		f.setLastModified(time);
 	}
 
 	/**
@@ -321,19 +269,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public long length(File path) throws IOException {
-		return FileUtils.getLength(path);
-	}
-
-	/**
-	 * Delete a file. Throws an exception if delete fails.
-	 *
-	 * @param f
-	 * @throws IOException
-	 *             this may be a Java7 subclass with detailed information
-	 * @since 3.3
-	 */
-	public void delete(File f) throws IOException {
-		FileUtils.delete(f);
+		return path.length();
 	}
 
 	/**
@@ -375,7 +311,7 @@ public abstract class FS {
 	public File userHome() {
 		Holder<File> p = userHome;
 		if (p == null) {
-			p = new Holder<>(userHomeImpl());
+			p = new Holder<File>(userHomeImpl());
 			userHome = p;
 		}
 		return p.value;
@@ -390,7 +326,7 @@ public abstract class FS {
 	 * @return {@code this}.
 	 */
 	public FS setUserHome(File path) {
-		userHome = new Holder<>(path);
+		userHome = new Holder<File>(path);
 		return this;
 	}
 
@@ -409,7 +345,6 @@ public abstract class FS {
 	protected File userHomeImpl() {
 		final String home = AccessController
 				.doPrivileged(new PrivilegedAction<String>() {
-					@Override
 					public String run() {
 						return System.getProperty("user.home"); //$NON-NLS-1$
 					}
@@ -452,241 +387,118 @@ public abstract class FS {
 	 * @param command
 	 *            as component array
 	 * @param encoding
-	 *            to be used to parse the command's output
-	 * @return the one-line output of the command or {@code null} if there is
-	 *         none
-	 * @throws CommandFailedException
-	 *             thrown when the command failed (return code was non-zero)
+	 * @return the one-line output of the command
 	 */
-	@Nullable
-	protected static String readPipe(File dir, String[] command,
-			String encoding) throws CommandFailedException {
-		return readPipe(dir, command, encoding, null);
-	}
-
-	/**
-	 * Execute a command and return a single line of output as a String
-	 *
-	 * @param dir
-	 *            Working directory for the command
-	 * @param command
-	 *            as component array
-	 * @param encoding
-	 *            to be used to parse the command's output
-	 * @param env
-	 *            Map of environment variables to be merged with those of the
-	 *            current process
-	 * @return the one-line output of the command or {@code null} if there is
-	 *         none
-	 * @throws CommandFailedException
-	 *             thrown when the command failed (return code was non-zero)
-	 * @since 4.0
-	 */
-	@Nullable
-	protected static String readPipe(File dir, String[] command,
-			String encoding, Map<String, String> env)
-			throws CommandFailedException {
-		final boolean debug = LOG.isDebugEnabled();
+	protected static String readPipe(File dir, String[] command, String encoding) {
+		final boolean debug = Boolean.parseBoolean(SystemReader.getInstance()
+				.getProperty("jgit.fs.debug")); //$NON-NLS-1$
 		try {
-			if (debug) {
-				LOG.debug("readpipe " + Arrays.asList(command) + "," //$NON-NLS-1$ //$NON-NLS-2$
+			if (debug)
+				System.err.println("readpipe " + Arrays.asList(command) + "," //$NON-NLS-1$ //$NON-NLS-2$
 						+ dir);
-			}
-			ProcessBuilder pb = new ProcessBuilder(command);
-			pb.directory(dir);
-			if (env != null) {
-				pb.environment().putAll(env);
-			}
-			Process p;
-			try {
-				p = pb.start();
-			} catch (IOException e) {
-				// Process failed to start
-				throw new CommandFailedException(-1, e.getMessage(), e);
-			}
+			final Process p = Runtime.getRuntime().exec(command, null, dir);
+			final BufferedReader lineRead = new BufferedReader(
+					new InputStreamReader(p.getInputStream(), encoding));
 			p.getOutputStream().close();
-			GobblerThread gobbler = new GobblerThread(p, command, dir);
-			gobbler.start();
-			String r = null;
-			try (BufferedReader lineRead = new BufferedReader(
-					new InputStreamReader(p.getInputStream(), encoding))) {
-				r = lineRead.readLine();
-				if (debug) {
-					LOG.debug("readpipe may return '" + r + "'"); //$NON-NLS-1$ //$NON-NLS-2$
-					LOG.debug("remaining output:\n"); //$NON-NLS-1$
-					String l;
-					while ((l = lineRead.readLine()) != null) {
-						LOG.debug(l);
+			final AtomicBoolean gooblerFail = new AtomicBoolean(false);
+			Thread gobbler = new Thread() {
+				public void run() {
+					InputStream is = p.getErrorStream();
+					try {
+						int ch;
+						if (debug)
+							while ((ch = is.read()) != -1)
+								System.err.print((char) ch);
+						else
+							while (is.read() != -1) {
+								// ignore
+							}
+					} catch (IOException e) {
+						// Just print on stderr for debugging
+						if (debug)
+							e.printStackTrace(System.err);
+						gooblerFail.set(true);
+					}
+					try {
+						is.close();
+					} catch (IOException e) {
+						// Just print on stderr for debugging
+						if (debug)
+							e.printStackTrace(System.err);
+						gooblerFail.set(true);
 					}
 				}
+			};
+			gobbler.start();
+			String r = null;
+			try {
+				r = lineRead.readLine();
+				if (debug) {
+					System.err.println("readpipe may return '" + r + "'"); //$NON-NLS-1$ //$NON-NLS-2$
+					System.err.println("(ignoring remaing output:"); //$NON-NLS-1$
+				}
+				String l;
+				while ((l = lineRead.readLine()) != null) {
+					if (debug)
+						System.err.println(l);
+				}
+			} finally {
+				p.getErrorStream().close();
+				lineRead.close();
 			}
 
 			for (;;) {
 				try {
 					int rc = p.waitFor();
 					gobbler.join();
-					if (rc == 0 && !gobbler.fail.get()) {
+					if (rc == 0 && r != null && r.length() > 0
+							&& !gooblerFail.get())
 						return r;
-					} else {
-						if (debug) {
-							LOG.debug("readpipe rc=" + rc); //$NON-NLS-1$
-						}
-						throw new CommandFailedException(rc,
-								gobbler.errorMessage.get(),
-								gobbler.exception.get());
-					}
+					if (debug)
+						System.err.println("readpipe rc=" + rc); //$NON-NLS-1$
+					break;
 				} catch (InterruptedException ie) {
 					// Stop bothering me, I have a zombie to reap.
 				}
 			}
 		} catch (IOException e) {
-			LOG.error("Caught exception in FS.readPipe()", e); //$NON-NLS-1$
+			if (debug)
+				System.err.println(e);
+			// Ignore error (but report)
 		}
-		if (debug) {
-			LOG.debug("readpipe returns null"); //$NON-NLS-1$
-		}
+		if (debug)
+			System.err.println("readpipe returns null"); //$NON-NLS-1$
 		return null;
 	}
 
-	private static class GobblerThread extends Thread {
-		private final Process p;
-		private final String desc;
-		private final String dir;
-		final AtomicBoolean fail = new AtomicBoolean();
-		final AtomicReference<String> errorMessage = new AtomicReference<>();
-		final AtomicReference<Throwable> exception = new AtomicReference<>();
-
-		GobblerThread(Process p, String[] command, File dir) {
-			this.p = p;
-			this.desc = Arrays.toString(command);
-			this.dir = Objects.toString(dir);
+	/** @return the $prefix directory C Git would use. */
+	public File gitPrefix() {
+		Holder<File> p = gitPrefix;
+		if (p == null) {
+			String overrideGitPrefix = SystemReader.getInstance().getProperty(
+					"jgit.gitprefix"); //$NON-NLS-1$
+			if (overrideGitPrefix != null)
+				p = new Holder<File>(new File(overrideGitPrefix));
+			else
+				p = new Holder<File>(discoverGitPrefix());
+			gitPrefix = p;
 		}
-
-		@Override
-		public void run() {
-			StringBuilder err = new StringBuilder();
-			try (InputStream is = p.getErrorStream()) {
-				int ch;
-				while ((ch = is.read()) != -1) {
-					err.append((char) ch);
-				}
-			} catch (IOException e) {
-				if (p.exitValue() != 0) {
-					setError(e, e.getMessage());
-					fail.set(true);
-				} else {
-					// ignore. command terminated faster and stream was just closed
-				}
-			} finally {
-				if (err.length() > 0) {
-					setError(null, err.toString());
-					if (p.exitValue() != 0) {
-						fail.set(true);
-					}
-				}
-			}
-		}
-
-		private void setError(IOException e, String message) {
-			exception.set(e);
-			errorMessage.set(MessageFormat.format(
-					JGitText.get().exceptionCaughtDuringExcecutionOfCommand,
-					desc, dir, Integer.valueOf(p.exitValue()), message));
-		}
+		return p.value;
 	}
 
-	/**
-	 * @return the path to the Git executable or {@code null} if it cannot be
-	 *         determined.
-	 * @since 4.0
-	 */
-	protected abstract File discoverGitExe();
+	/** @return the $prefix directory C Git would use. */
+	protected abstract File discoverGitPrefix();
 
 	/**
-	 * @return the path to the system-wide Git configuration file or
-	 *         {@code null} if it cannot be determined.
-	 * @since 4.0
-	 */
-	protected File discoverGitSystemConfig() {
-		File gitExe = discoverGitExe();
-		if (gitExe == null) {
-			return null;
-		}
-
-		// Bug 480782: Check if the discovered git executable is JGit CLI
-		String v;
-		try {
-			v = readPipe(gitExe.getParentFile(),
-				new String[] { "git", "--version" }, //$NON-NLS-1$ //$NON-NLS-2$
-				Charset.defaultCharset().name());
-		} catch (CommandFailedException e) {
-			LOG.warn(e.getMessage());
-			return null;
-		}
-		if (StringUtils.isEmptyOrNull(v)
-				|| (v != null && v.startsWith("jgit"))) { //$NON-NLS-1$
-			return null;
-		}
-
-		// Trick Git into printing the path to the config file by using "echo"
-		// as the editor.
-		Map<String, String> env = new HashMap<>();
-		env.put("GIT_EDITOR", "echo"); //$NON-NLS-1$ //$NON-NLS-2$
-
-		String w;
-		try {
-			w = readPipe(gitExe.getParentFile(),
-				new String[] { "git", "config", "--system", "--edit" }, //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
-				Charset.defaultCharset().name(), env);
-		} catch (CommandFailedException e) {
-			LOG.warn(e.getMessage());
-			return null;
-		}
-		if (StringUtils.isEmptyOrNull(w)) {
-			return null;
-		}
-
-		return new File(w);
-	}
-
-	/**
-	 * @return the currently used path to the system-wide Git configuration
-	 *         file or {@code null} if none has been set.
-	 * @since 4.0
-	 */
-	public File getGitSystemConfig() {
-		if (gitSystemConfig == null) {
-			gitSystemConfig = new Holder<>(discoverGitSystemConfig());
-		}
-		return gitSystemConfig.value;
-	}
-
-	/**
-	 * Set the path to the system-wide Git configuration file to use.
+	 * Set the $prefix directory C Git uses.
 	 *
-	 * @param configFile
-	 *            the path to the config file.
+	 * @param path
+	 *            the directory. Null if C Git is not installed.
 	 * @return {@code this}
-	 * @since 4.0
 	 */
-	public FS setGitSystemConfig(File configFile) {
-		gitSystemConfig = new Holder<>(configFile);
+	public FS setGitPrefix(File path) {
+		gitPrefix = new Holder<File>(path);
 		return this;
-	}
-
-	/**
-	 * @param grandchild
-	 * @return the parent directory of this file's parent directory or
-	 *         {@code null} in case there's no grandparent directory
-	 * @since 4.0
-	 */
-	protected static File resolveGrandparentFile(File grandchild) {
-		if (grandchild != null) {
-			File parent = grandchild.getParentFile();
-			if (parent != null)
-				return parent.getParentFile();
-		}
-		return null;
 	}
 
 	/**
@@ -698,7 +510,8 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public String readSymLink(File path) throws IOException {
-		return FileUtils.readSymLink(path);
+		throw new SymlinksNotSupportedException(
+				JGitText.get().errorSymlinksNotSupported);
 	}
 
 	/**
@@ -708,7 +521,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public boolean isSymLink(File path) throws IOException {
-		return FileUtils.isSymlink(path);
+		return false;
 	}
 
 	/**
@@ -720,7 +533,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public boolean exists(File path) {
-		return FileUtils.exists(path);
+		return path.exists();
 	}
 
 	/**
@@ -732,7 +545,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public boolean isDirectory(File path) {
-		return FileUtils.isDirectory(path);
+		return path.isDirectory();
 	}
 
 	/**
@@ -744,7 +557,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public boolean isFile(File path) {
-		return FileUtils.isFile(path);
+		return path.isFile();
 	}
 
 	/**
@@ -755,7 +568,7 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public boolean isHidden(File path) throws IOException {
-		return FileUtils.isHidden(path);
+		return path.isHidden();
 	}
 
 	/**
@@ -767,7 +580,9 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public void setHidden(File path, boolean hidden) throws IOException {
-		FileUtils.setHidden(path, hidden);
+		if (!path.getName().startsWith(".")) //$NON-NLS-1$
+			throw new IllegalArgumentException(
+					"Hiding only allowed for names that start with a period");
 	}
 
 	/**
@@ -779,341 +594,12 @@ public abstract class FS {
 	 * @since 3.0
 	 */
 	public void createSymLink(File path, String target) throws IOException {
-		FileUtils.createSymLink(path, target);
+		throw new SymlinksNotSupportedException(
+				JGitText.get().errorSymlinksNotSupported);
 	}
 
 	/**
-	 * See {@link FileUtils#relativizePath(String, String, String, boolean)}.
-	 *
-	 * @param base
-	 *            The path against which <code>other</code> should be
-	 *            relativized.
-	 * @param other
-	 *            The path that will be made relative to <code>base</code>.
-	 * @return A relative path that, when resolved against <code>base</code>,
-	 *         will yield the original <code>other</code>.
-	 * @see FileUtils#relativizePath(String, String, String, boolean)
-	 * @since 3.7
-	 */
-	public String relativize(String base, String other) {
-		return FileUtils.relativizePath(base, other, File.separator, this.isCaseSensitive());
-	}
-
-	/**
-	 * Checks whether the given hook is defined for the given repository, then
-	 * runs it with the given arguments.
-	 * <p>
-	 * The hook's standard output and error streams will be redirected to
-	 * <code>System.out</code> and <code>System.err</code> respectively. The
-	 * hook will have no stdin.
-	 * </p>
-	 *
-	 * @param repository
-	 *            The repository for which a hook should be run.
-	 * @param hookName
-	 *            The name of the hook to be executed.
-	 * @param args
-	 *            Arguments to pass to this hook. Cannot be <code>null</code>,
-	 *            but can be an empty array.
-	 * @return The ProcessResult describing this hook's execution.
-	 * @throws JGitInternalException
-	 *             if we fail to run the hook somehow. Causes may include an
-	 *             interrupted process or I/O errors.
-	 * @since 4.0
-	 */
-	public ProcessResult runHookIfPresent(Repository repository,
-			final String hookName,
-			String[] args) throws JGitInternalException {
-		return runHookIfPresent(repository, hookName, args, System.out, System.err,
-				null);
-	}
-
-	/**
-	 * Checks whether the given hook is defined for the given repository, then
-	 * runs it with the given arguments.
-	 *
-	 * @param repository
-	 *            The repository for which a hook should be run.
-	 * @param hookName
-	 *            The name of the hook to be executed.
-	 * @param args
-	 *            Arguments to pass to this hook. Cannot be <code>null</code>,
-	 *            but can be an empty array.
-	 * @param outRedirect
-	 *            A print stream on which to redirect the hook's stdout. Can be
-	 *            <code>null</code>, in which case the hook's standard output
-	 *            will be lost.
-	 * @param errRedirect
-	 *            A print stream on which to redirect the hook's stderr. Can be
-	 *            <code>null</code>, in which case the hook's standard error
-	 *            will be lost.
-	 * @param stdinArgs
-	 *            A string to pass on to the standard input of the hook. May be
-	 *            <code>null</code>.
-	 * @return The ProcessResult describing this hook's execution.
-	 * @throws JGitInternalException
-	 *             if we fail to run the hook somehow. Causes may include an
-	 *             interrupted process or I/O errors.
-	 * @since 4.0
-	 */
-	public ProcessResult runHookIfPresent(Repository repository,
-			final String hookName,
-			String[] args, PrintStream outRedirect, PrintStream errRedirect,
-			String stdinArgs) throws JGitInternalException {
-		return new ProcessResult(Status.NOT_SUPPORTED);
-	}
-
-	/**
-	 * See
-	 * {@link #runHookIfPresent(Repository, String, String[], PrintStream, PrintStream, String)}
-	 * . Should only be called by FS supporting shell scripts execution.
-	 *
-	 * @param repository
-	 *            The repository for which a hook should be run.
-	 * @param hookName
-	 *            The name of the hook to be executed.
-	 * @param args
-	 *            Arguments to pass to this hook. Cannot be <code>null</code>,
-	 *            but can be an empty array.
-	 * @param outRedirect
-	 *            A print stream on which to redirect the hook's stdout. Can be
-	 *            <code>null</code>, in which case the hook's standard output
-	 *            will be lost.
-	 * @param errRedirect
-	 *            A print stream on which to redirect the hook's stderr. Can be
-	 *            <code>null</code>, in which case the hook's standard error
-	 *            will be lost.
-	 * @param stdinArgs
-	 *            A string to pass on to the standard input of the hook. May be
-	 *            <code>null</code>.
-	 * @return The ProcessResult describing this hook's execution.
-	 * @throws JGitInternalException
-	 *             if we fail to run the hook somehow. Causes may include an
-	 *             interrupted process or I/O errors.
-	 * @since 4.0
-	 */
-	protected ProcessResult internalRunHookIfPresent(Repository repository,
-			final String hookName, String[] args, PrintStream outRedirect,
-			PrintStream errRedirect, String stdinArgs)
-			throws JGitInternalException {
-		final File hookFile = findHook(repository, hookName);
-		if (hookFile == null)
-			return new ProcessResult(Status.NOT_PRESENT);
-
-		final String hookPath = hookFile.getAbsolutePath();
-		final File runDirectory;
-		if (repository.isBare())
-			runDirectory = repository.getDirectory();
-		else
-			runDirectory = repository.getWorkTree();
-		final String cmd = relativize(runDirectory.getAbsolutePath(),
-				hookPath);
-		ProcessBuilder hookProcess = runInShell(cmd, args);
-		hookProcess.directory(runDirectory);
-		try {
-			return new ProcessResult(runProcess(hookProcess, outRedirect,
-					errRedirect, stdinArgs), Status.OK);
-		} catch (IOException e) {
-			throw new JGitInternalException(MessageFormat.format(
-					JGitText.get().exceptionCaughtDuringExecutionOfHook,
-					hookName), e);
-		} catch (InterruptedException e) {
-			throw new JGitInternalException(MessageFormat.format(
-					JGitText.get().exceptionHookExecutionInterrupted,
-							hookName), e);
-		}
-	}
-
-
-	/**
-	 * Tries to find a hook matching the given one in the given repository.
-	 *
-	 * @param repository
-	 *            The repository within which to find a hook.
-	 * @param hookName
-	 *            The name of the hook we're trying to find.
-	 * @return The {@link File} containing this particular hook if it exists in
-	 *         the given repository, <code>null</code> otherwise.
-	 * @since 4.0
-	 */
-	public File findHook(Repository repository, final String hookName) {
-		File gitDir = repository.getDirectory();
-		if (gitDir == null)
-			return null;
-		final File hookFile = new File(new File(gitDir,
-				Constants.HOOKS), hookName);
-		return hookFile.isFile() ? hookFile : null;
-	}
-
-	/**
-	 * Runs the given process until termination, clearing its stdout and stderr
-	 * streams on-the-fly.
-	 *
-	 * @param processBuilder
-	 *            The process builder configured for this process.
-	 * @param outRedirect
-	 *            A OutputStream on which to redirect the processes stdout. Can
-	 *            be <code>null</code>, in which case the processes standard
-	 *            output will be lost.
-	 * @param errRedirect
-	 *            A OutputStream on which to redirect the processes stderr. Can
-	 *            be <code>null</code>, in which case the processes standard
-	 *            error will be lost.
-	 * @param stdinArgs
-	 *            A string to pass on to the standard input of the hook. Can be
-	 *            <code>null</code>.
-	 * @return the exit value of this process.
-	 * @throws IOException
-	 *             if an I/O error occurs while executing this process.
-	 * @throws InterruptedException
-	 *             if the current thread is interrupted while waiting for the
-	 *             process to end.
-	 * @since 4.2
-	 */
-	public int runProcess(ProcessBuilder processBuilder,
-			OutputStream outRedirect, OutputStream errRedirect, String stdinArgs)
-			throws IOException, InterruptedException {
-		InputStream in = (stdinArgs == null) ? null : new ByteArrayInputStream(
-				stdinArgs.getBytes(Constants.CHARACTER_ENCODING));
-		return runProcess(processBuilder, outRedirect, errRedirect, in);
-	}
-
-	/**
-	 * Runs the given process until termination, clearing its stdout and stderr
-	 * streams on-the-fly.
-	 *
-	 * @param processBuilder
-	 *            The process builder configured for this process.
-	 * @param outRedirect
-	 *            An OutputStream on which to redirect the processes stdout. Can
-	 *            be <code>null</code>, in which case the processes standard
-	 *            output will be lost.
-	 * @param errRedirect
-	 *            An OutputStream on which to redirect the processes stderr. Can
-	 *            be <code>null</code>, in which case the processes standard
-	 *            error will be lost.
-	 * @param inRedirect
-	 *            An InputStream from which to redirect the processes stdin. Can
-	 *            be <code>null</code>, in which case the process doesn't get
-	 *            any data over stdin. It is assumed that the whole InputStream
-	 *            will be consumed by the process. The method will close the
-	 *            inputstream after all bytes are read.
-	 * @return the return code of this process.
-	 * @throws IOException
-	 *             if an I/O error occurs while executing this process.
-	 * @throws InterruptedException
-	 *             if the current thread is interrupted while waiting for the
-	 *             process to end.
-	 * @since 4.2
-	 */
-	public int runProcess(ProcessBuilder processBuilder,
-			OutputStream outRedirect, OutputStream errRedirect,
-			InputStream inRedirect) throws IOException,
-			InterruptedException {
-		final ExecutorService executor = Executors.newFixedThreadPool(2);
-		Process process = null;
-		// We'll record the first I/O exception that occurs, but keep on trying
-		// to dispose of our open streams and file handles
-		IOException ioException = null;
-		try {
-			process = processBuilder.start();
-			executor.execute(
-					new StreamGobbler(process.getErrorStream(), errRedirect));
-			executor.execute(
-					new StreamGobbler(process.getInputStream(), outRedirect));
-			OutputStream outputStream = process.getOutputStream();
-			if (inRedirect != null) {
-				new StreamGobbler(inRedirect, outputStream).copy();
-			}
-			try {
-				outputStream.close();
-			} catch (IOException e) {
-				// When the process exits before consuming the input, the OutputStream
-				// is replaced with the null output stream. This null output stream
-				// throws IOException for all write calls. When StreamGobbler fails to
-				// flush the buffer because of this, this close call tries to flush it
-				// again. This causes another IOException. Since we ignore the
-				// IOException in StreamGobbler, we also ignore the exception here.
-			}
-			return process.waitFor();
-		} catch (IOException e) {
-			ioException = e;
-		} finally {
-			shutdownAndAwaitTermination(executor);
-			if (process != null) {
-				try {
-					process.waitFor();
-				} catch (InterruptedException e) {
-					// Thrown by the outer try.
-					// Swallow this one to carry on our cleanup, and clear the
-					// interrupted flag (processes throw the exception without
-					// clearing the flag).
-					Thread.interrupted();
-				}
-				// A process doesn't clean its own resources even when destroyed
-				// Explicitly try and close all three streams, preserving the
-				// outer I/O exception if any.
-				if (inRedirect != null) {
-					inRedirect.close();
-				}
-				try {
-					process.getErrorStream().close();
-				} catch (IOException e) {
-					ioException = ioException != null ? ioException : e;
-				}
-				try {
-					process.getInputStream().close();
-				} catch (IOException e) {
-					ioException = ioException != null ? ioException : e;
-				}
-				try {
-					process.getOutputStream().close();
-				} catch (IOException e) {
-					ioException = ioException != null ? ioException : e;
-				}
-				process.destroy();
-			}
-		}
-		// We can only be here if the outer try threw an IOException.
-		throw ioException;
-	}
-
-	/**
-	 * Shuts down an {@link ExecutorService} in two phases, first by calling
-	 * {@link ExecutorService#shutdown() shutdown} to reject incoming tasks, and
-	 * then calling {@link ExecutorService#shutdownNow() shutdownNow}, if
-	 * necessary, to cancel any lingering tasks. Returns true if the pool has
-	 * been properly shutdown, false otherwise.
-	 * <p>
-	 *
-	 * @param pool
-	 *            the pool to shutdown
-	 * @return <code>true</code> if the pool has been properly shutdown,
-	 *         <code>false</code> otherwise.
-	 */
-	private static boolean shutdownAndAwaitTermination(ExecutorService pool) {
-		boolean hasShutdown = true;
-		pool.shutdown(); // Disable new tasks from being submitted
-		try {
-			// Wait a while for existing tasks to terminate
-			if (!pool.awaitTermination(60, TimeUnit.SECONDS)) {
-				pool.shutdownNow(); // Cancel currently executing tasks
-				// Wait a while for tasks to respond to being canceled
-				if (!pool.awaitTermination(60, TimeUnit.SECONDS))
-					hasShutdown = false;
-			}
-		} catch (InterruptedException ie) {
-			// (Re-)Cancel if current thread also interrupted
-			pool.shutdownNow();
-			// Preserve interrupt status
-			Thread.currentThread().interrupt();
-			hasShutdown = false;
-		}
-		return hasShutdown;
-	}
-
-	/**
-	 * Initialize a ProcessBuilder to run a command using the system shell.
+	 * Initialize a ProcesssBuilder to run a command using the system shell.
 	 *
 	 * @param cmd
 	 *            command to execute. This string should originate from the
@@ -1126,255 +612,11 @@ public abstract class FS {
 	 */
 	public abstract ProcessBuilder runInShell(String cmd, String[] args);
 
-	/**
-	 * Execute a command defined by a {@link ProcessBuilder}.
-	 *
-	 * @param pb
-	 *            The command to be executed
-	 * @param in
-	 *            The standard input stream passed to the process
-	 * @return The result of the executed command
-	 * @throws InterruptedException
-	 * @throws IOException
-	 * @since 4.2
-	 */
-	public ExecutionResult execute(ProcessBuilder pb, InputStream in)
-			throws IOException, InterruptedException {
-		TemporaryBuffer stdout = new TemporaryBuffer.LocalFile(null);
-		TemporaryBuffer stderr = new TemporaryBuffer.Heap(1024, 1024 * 1024);
-		try {
-			int rc = runProcess(pb, stdout, stderr, in);
-			return new ExecutionResult(stdout, stderr, rc);
-		} finally {
-			stdout.close();
-			stderr.close();
-		}
-	}
-
 	private static class Holder<V> {
 		final V value;
 
 		Holder(V value) {
 			this.value = value;
-		}
-	}
-
-	/**
-	 * File attributes we typically care for.
-	 *
-	 * @since 3.3
-	 */
-	public static class Attributes {
-
-		/**
-		 * @return true if this are the attributes of a directory
-		 */
-		public boolean isDirectory() {
-			return isDirectory;
-		}
-
-		/**
-		 * @return true if this are the attributes of an executable file
-		 */
-		public boolean isExecutable() {
-			return isExecutable;
-		}
-
-		/**
-		 * @return true if this are the attributes of a symbolic link
-		 */
-		public boolean isSymbolicLink() {
-			return isSymbolicLink;
-		}
-
-		/**
-		 * @return true if this are the attributes of a regular file
-		 */
-		public boolean isRegularFile() {
-			return isRegularFile;
-		}
-
-		/**
-		 * @return the time when the file was created
-		 */
-		public long getCreationTime() {
-			return creationTime;
-		}
-
-		/**
-		 * @return the time (milliseconds since 1970-01-01) when this object was
-		 *         last modified
-		 */
-		public long getLastModifiedTime() {
-			return lastModifiedTime;
-		}
-
-		private final boolean isDirectory;
-
-		private final boolean isSymbolicLink;
-
-		private final boolean isRegularFile;
-
-		private final long creationTime;
-
-		private final long lastModifiedTime;
-
-		private final boolean isExecutable;
-
-		private final File file;
-
-		private final boolean exists;
-
-		/**
-		 * file length
-		 */
-		protected long length = -1;
-
-		final FS fs;
-
-		Attributes(FS fs, File file, boolean exists, boolean isDirectory,
-				boolean isExecutable, boolean isSymbolicLink,
-				boolean isRegularFile, long creationTime,
-				long lastModifiedTime, long length) {
-			this.fs = fs;
-			this.file = file;
-			this.exists = exists;
-			this.isDirectory = isDirectory;
-			this.isExecutable = isExecutable;
-			this.isSymbolicLink = isSymbolicLink;
-			this.isRegularFile = isRegularFile;
-			this.creationTime = creationTime;
-			this.lastModifiedTime = lastModifiedTime;
-			this.length = length;
-		}
-
-		/**
-		 * Constructor when there are issues with reading. All attributes except
-		 * given will be set to the default values.
-		 *
-		 * @param fs
-		 * @param path
-		 */
-		public Attributes(File path, FS fs) {
-			this(fs, path, false, false, false, false, false, 0L, 0L, 0L);
-		}
-
-		/**
-		 * @return length of this file object
-		 */
-		public long getLength() {
-			if (length == -1)
-				return length = file.length();
-			return length;
-		}
-
-		/**
-		 * @return the filename
-		 */
-		public String getName() {
-			return file.getName();
-		}
-
-		/**
-		 * @return the file the attributes apply to
-		 */
-		public File getFile() {
-			return file;
-		}
-
-		boolean exists() {
-			return exists;
-		}
-	}
-
-	/**
-	 * @param path
-	 * @return the file attributes we care for
-	 * @since 3.3
-	 */
-	public Attributes getAttributes(File path) {
-		boolean isDirectory = isDirectory(path);
-		boolean isFile = !isDirectory && path.isFile();
-		assert path.exists() == isDirectory || isFile;
-		boolean exists = isDirectory || isFile;
-		boolean canExecute = exists && !isDirectory && canExecute(path);
-		boolean isSymlink = false;
-		long lastModified = exists ? path.lastModified() : 0L;
-		long createTime = 0L;
-		return new Attributes(this, path, exists, isDirectory, canExecute,
-				isSymlink, isFile, createTime, lastModified, -1);
-	}
-
-	/**
-	 * Normalize the unicode path to composed form.
-	 *
-	 * @param file
-	 * @return NFC-format File
-	 * @since 3.3
-	 */
-	public File normalize(File file) {
-		return file;
-	}
-
-	/**
-	 * Normalize the unicode path to composed form.
-	 *
-	 * @param name
-	 * @return NFC-format string
-	 * @since 3.3
-	 */
-	public String normalize(String name) {
-		return name;
-	}
-
-	/**
-	 * This runnable will consume an input stream's content into an output
-	 * stream as soon as it gets available.
-	 * <p>
-	 * Typically used to empty processes' standard output and error, preventing
-	 * them to choke.
-	 * </p>
-	 * <p>
-	 * <b>Note</b> that a {@link StreamGobbler} will never close either of its
-	 * streams.
-	 * </p>
-	 */
-	private static class StreamGobbler implements Runnable {
-		private InputStream in;
-
-		private OutputStream out;
-
-		public StreamGobbler(InputStream stream, OutputStream output) {
-			this.in = stream;
-			this.out = output;
-		}
-
-		@Override
-		public void run() {
-			try {
-				copy();
-			} catch (IOException e) {
-				// Do nothing on read failure; leave streams open.
-			}
-		}
-
-		void copy() throws IOException {
-			boolean writeFailure = false;
-			byte buffer[] = new byte[4096];
-			int readBytes;
-			while ((readBytes = in.read(buffer)) != -1) {
-				// Do not try to write again after a failure, but keep
-				// reading as long as possible to prevent the input stream
-				// from choking.
-				if (!writeFailure && out != null) {
-					try {
-						out.write(buffer, 0, readBytes);
-						out.flush();
-					} catch (IOException e) {
-						writeFailure = true;
-					}
-				}
-			}
 		}
 	}
 }
